[package]
name = "NFTonBase_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
ic-web3 = { git = "https://github.com/rocklabs-io/ic-web3" }
hex = "0.4.3"
serde = "1.0.132"
serde_json = "1.0.114"
junobuild-utils = "0.0.1"
http = "1.1.0"
serde_bytes = "0.11.15"
ic-stable-memory = "0.4"
ic-stable-structures = "0.6.2"
sha2 = "0.10.8"
ic-ledger-types = "0.12.0"